config/examples/test3_public-route3_HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-route3
  namespace: test3
spec:
  parentRefs:
    - name: gateway1
      namespace: default
      sectionName: https18443

  hostnames:
    - "ccc1.example.com"
    - "ddd3.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /aaa/doc/
        - path:
            type: PathPrefix
            value: /aaa/exact
      backendRefs:
        - name: aaa-service
          port: 30001

    - matches:
        - path:
            type: PathPrefix
            value: /bbb/123
        - path:
            type: Exact
            value: /bbb/:id1/ccc/:id2/eee
      backendRefs:
        - name: aaa-service
          port: 30002
          weight: 1
        - name: bbb-service
          port: 30003
          weight: 3

    - matches:
        - path:
            type: PathPrefix
            value: /ccc/api/
        - path:
            type: Exact
            value: /ccc/:id1/:id2/ddd
      backendRefs:
        - name: aaa-service
          port: 30002
          kind: Service
          weight: 1
        - name: bbb-service
          port: 30003
          weight: 3
          kind: Service
